--- a/templates/news/home.html
+++ b/templates/news/home.html
@@ -15,8 +15,7 @@
     <img src="{{ n.image.url }}" class="card-img-top" alt="...">
     <div class="card-body">
         <div class="text-muted fst-italic mb-2">{{ n.date_of_create|date:'M j Y H:i' }}</div>
-        <!--                        <div class="text-muted fst-italic mb-2">Last update {# n.date_of_update|date:'M j Y H:i' #}-->
-        <!--                        </div>-->
+        <div class="text-muted fst-italic mb-2">{# n.category #}</div>
         <h5 class="card-title">{{ n.title }}</h5>
         <p class="card-text">{{ n.description }}</p>
         <a href="{{ n.get_absolute_url }}" class="stretched-link"></a>
